Fixet z-index gjort så knapper forsvinder på add cafe

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ main {
     top: 0;
     left: 0;
     width: 100%;
-
+    z-index: 9999;
 }
 
 .nav-container {
